--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             display: none; /* Initially hidden */
             flex-direction: row; /* Horizontal layout */
             justify-content: center; /* Center buttons */
-            position: absolute;
-            top: 20%; /* Position below welcome text */
+            position: fixed; /* Fixed position */
+            top: 10%; /* Position below welcome text */
             left: 50%;
             transform: translateX(-50%);
             z-index: 10; /* Ensure it is above other elements */
