--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="gif-container" id="gifContainer"></div>
     <div class="welcome-text" id="welcomeText">Welcome to Infinity</div>
     <div class="buttons" id="buttons">
-        <button class="button" onclick="window.open('https://infinity-xi-eight.vercel.app/', '_blank')">Telegram</button>
+        <button class="button" onclick="window.open('https://t.me/InfiniteDollar', '_blank')">Telegram</button>
         <button class="button" onclick="togglePopup()">Contract Address</button>
     </div>
     <div class="flashing-sign" id="flashingSign">Scroll down for more info</div>
